--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="background">
       <img class="background-image" src="CELAJE MORADO-02.jpg" alt="Fondo">
       <div class="circle">
-        <a href="file:///D:/catalogo-celaje/index.html">Iniciar</a>
+        <a href="https://github.com/jann0410/celaje.git">Iniciar</a>
       </div>
       <div class="logo">
        
